--- a/index.html
+++ b/index.html
@@ -433,57 +433,80 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="skills">
-    <h2>My Skills</h2>
-    <div class="skill-container">
-      <div class="skill-card">
-        <i class="fab fa-html5" style="color:#f97316;"></i>
-        <h3>HTML5</h3>
-        <p>Strong foundation in building structured and semantic web pages.</p>
-      </div>
-      <div class="skill-card">
-        <i class="fab fa-css3-alt" style="color:#2563eb;"></i>
-        <h3>CSS3</h3>
-        <p>Proficient in styling and creating modern, responsive designs.</p>
-      </div>
-      <div class="skill-card">
-        <i class="fas fa-terminal" style="color:#38bdf8;"></i>
-        <h3>C++</h3>
-        <p>Experience with object-oriented programming for building robust applications.</p>
-      </div>
-      <div class="skill-card">
-        <i class="fas fa-file-code" style="color:#9ca3af;"></i>
-        <h3>C</h3>
-        <p>Solid understanding of core programming concepts and low-level system interactions.</p>
-      </div>
-    </div>
-  </section>
+  <!-- Add this inside your <head> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
 
-  <!-- Projects Section (New Content) -->
-  <section id="projects">
-    <h2>My Projects</h2>
-    <div class="project-container">
-      <div class="project-card card-hover">
-        <h3>my calculater </h3>
-        <p>My first step into coding world  A simple yet smart Calculator project!.From logic to design  presenting my Calculator project.Turning code into calculations! 💻➕➖✖️➗.A small project, a big learning my Calculator app is ready!.Code × Creativity = My Calculator Project</p>
-        <a href=" https://lalitsuthar45.github.io/mycalculater/" class="btn-secondary">View Project</a>
-      </div>
-      <div class="project-card card-hover">
-        <h3>Jio hotstar login page</h3>
-        <p>Redesigned the Jio Hotstar login page with code + creativity! 
-Entertainment meets coding – my Jio Hotstar login page project is here!.
-From movies to matches, login now with my custom Jio Hotstar page.
-UI × UX × Coding = My Jio Hotstar Login Page project.
-Streaming ideas into reality – presenting Jio Hotstar login page.</p>
-        <a href=" https://lalitsuthar45.github.io/jiohotstar/" class="btn-secondary">View project</a>
-      </div>
-      <div class="project-card card-hover">
-        <h3>LalitSutharOfficial</h3>
-        <p>"Every line of code tells a story of learning, creativity, and innovation 🚀. With my GitHub profile ‘lalitsutharoFFIcia’, I’m not just uploading projects, I’m documenting my journey as a developer 💻✨. From small experiments to big ideas, each repository reflects consistency, growth, and passion for technology 🔥. This is more than just a collection of files – it’s a roadmap of skills, challenges, and achievements that shape me into a better coder every single day 🌟."</p>
-        <a href=" https://lalitsuthar45.github.io/LalitSutharOfficial/" class="btn-secondary">View Details</a>
-      </div>
+<!-- Skills Section -->
+<section id="skills">
+  <h2>My Skills</h2>
+  <div class="skill-container">
+
+    <div class="skill-card">
+      <i class="fab fa-html5" style="color:#f97316;"></i>
+      <h3>HTML5</h3>
+      <p>Strong foundation in building structured and semantic web pages.</p>
     </div>
-  </section>
+
+    <div class="skill-card">
+      <i class="fab fa-css3-alt" style="color:#2563eb;"></i>
+      <h3>CSS3</h3>
+      <p>Proficient in styling and creating modern, responsive designs.</p>
+    </div>
+
+    <div class="skill-card">
+      <i class="fas fa-terminal" style="color:#38bdf8;"></i>
+      <h3>C++</h3>
+      <p>Experience with object-oriented programming for building robust applications.</p>
+    </div>
+
+    <div class="skill-card">
+      <i class="fas fa-code" style="color:#9ca3af;"></i>
+      <h3>C</h3>
+      <p>Solid understanding of core programming concepts and low-level system interactions.</p>
+    </div>
+
+    <div class="skill-card">
+      <i class="devicon-mysql-original colored" style="font-size:48px;"></i>
+      <h3>MySQL</h3>
+      <p>Turning data into power — crafting logic, structure, and insights with MySQL! 💾🚀</p>
+    </div>
+
+  </div>
+</section>
+
+<!-- Projects Section -->
+<section id="projects">
+  <h2>My Projects</h2>
+  <div class="project-container">
+
+    <div class="project-card card-hover">
+      <h3>My Calculator</h3>
+      <p>My first step into the coding world — a simple yet smart Calculator project! From logic to design, presenting my Calculator project. Turning code into calculations! 💻➕➖✖️➗ A small project, a big learning — Code × Creativity = My Calculator Project.</p>
+      <a href="https://lalitsuthar45.github.io/mycalculater/" class="btn-secondary">View Project</a>
+    </div>
+
+    <div class="project-card card-hover">
+      <h3>Jio Hotstar Login Page</h3>
+      <p>Redesigned the Jio Hotstar login page with code + creativity! Entertainment meets coding — my Jio Hotstar login page project is here! Streaming ideas into reality – UI × UX × Coding = My Jio Hotstar Page. 🎬💻</p>
+      <a href="https://lalitsuthar45.github.io/jiohotstar/" class="btn-secondary">View Project</a>
+    </div>
+
+    <div class="project-card card-hover">
+      <h3>LalitSutharOfficial</h3>
+      <p>Every line of code tells a story of learning, creativity, and innovation 🚀. My GitHub profile ‘lalitsutharOFFIcia’ isn’t just code — it’s my growth story as a developer 💻✨. Each repo reflects consistency, passion, and skill evolution 🔥.</p>
+      <a href="https://lalitsuthar45.github.io/LalitSutharOfficial/" class="btn-secondary">View Details</a>
+    </div>
+
+    <div class="project-card card-hover">
+      <h3>Student Attendance Management</h3>
+      <p>Taking another step in my coding journey — presenting my Student Attendance Management System! 💻 From roll calls to reports, I turned code into a smart attendance tracker. No more paper sheets — just digital presence with a click! ✅ Code × Management = My Smart Attendance Project 🚀📋</p>
+      <a href="https://lalitsuthar45.github.io/Attendance/" class="btn-secondary">View Details</a>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- Contact Section -->
   <section id="contact">
@@ -517,7 +540,6 @@ Streaming ideas into reality – presenting Jio Hotstar login page.</p>
 
 </body>
 </html>
-
 
 
 
