--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <div class="project-card card-hover">
       <h3>LalitSutharOfficial</h3>
       <p>Every line of code tells a story of learning, creativity, and innovation 🚀. My GitHub profile ‘lalitsutharOFFIcia’ isn’t just code — it’s my growth story as a developer 💻✨. Each repo reflects consistency, passion, and skill evolution 🔥.</p>
-      <a href="https://lalitsuthar45.github.io/LalitSutharOfficial/" class="btn-secondary">View Details</a>
+      <a href="https://lalitsuthar45.github.io/lalitsuthar45/" class="btn-secondary">View Details</a>
     </div>
 
     <div class="project-card card-hover">
@@ -540,6 +540,7 @@
 
 </body>
 </html>
+
 
 
 
