--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     </div>
     <div class="hero-img">
       <!-- Placeholder image: Replace 'myimage.jpg' with your actual image path/URL -->
-      <img src="newphoto.png" alt="Profile Picture">
+      <img src="Resumephoto.png" alt="Profile Picture">
     </div>
   </section>
 
@@ -535,6 +535,7 @@
 
 </body>
 </html>
+
 
 
 
