--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
         height: 350px;
         border-radius: 50%;
         object-fit: cover;
-        border: 5px solid var(--color-accent-secondary);
-        box-shadow: 0 0 20px rgba(56, 189, 248, 0.5);
+       border: 2px solid  rgba(77, 67, 100, 0.8);
+        box-shadow: 0 0 20px rgba(77, 67, 100, 0.8);
         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     }
 
     /* Profile Image Hover Effect */
     .hero-img img:hover {
         transform: scale(1.05);
-        box-shadow: 0 0 30px rgba(56, 189, 248, 0.8);
+       
     }
 
     .buttons {
@@ -535,6 +535,7 @@
 
 </body>
 </html>
+
 
 
 
