--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   <script>
     var typed = new Typed("#typing", {
-      strings: ["Web Developer", "Video Designer","Graphic Designer", "App Devloper"],
+      strings: ["Software Developer", "Web Developer"," Data Managment", "Problem Solving"],
       typeSpeed: 70,
       backSpeed: 70,
       loop: true
@@ -534,6 +534,7 @@
 
 </body>
 </html>
+
 
 
 
