--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 
   <!-- Contact Section -->
   <section id="contact">
-    <h3>Let's connect!</h3>
+    <h3>Let's follow me!</h3>
     <div class="social-icons">
       <a href="https://instagram.com/lalit_suthar_45" class="instagram" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://linkedin.com/in/lalit-suthar-445646334" class="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -534,6 +534,7 @@
 
 </body>
 </html>
+
 
 
 
