--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -107,7 +108,7 @@
         color: var(--color-text-light);
         text-decoration: none;
         padding: 8px 15px;
-        border-radius: 8px;
+        border-radius: 50px;
         transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
     }
 
@@ -237,7 +238,7 @@
 
     .about-content:hover {
         transform: translateY(-5px); /* Subtle hover lift */
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+         box-shadow: 0 0 10px rgba(56, 189, 248, 0.5);
     }
 
     .about-content p {
@@ -268,7 +269,7 @@
     /* Card Hover Effect */
     .skill-card:hover, .project-card.card-hover:hover {
         transform: translateY(-8px);
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+           box-shadow: 0 0 10px rgba(56, 189, 248, 0.5);
     }
 
     .skill-card i {
